# rss-slicer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: python-package.yml
src/rss_slicer/: __init__.py  _rss_types.py  _serialize.py  rss.py
src/rss_slicer/rss/: __init__.py  _rss_types.py  _serialize.py  xml.py
tests/: test_metadata.py  test_mutate.py  test_serialization.py  test_slicing.py
