[project]
name = "rss-slicer"
version = "0.1.0"
license = {file="COPYING"}
keywords = ['rss']
classifiers = [
	'Development Status :: 2 - Pre-Alpha',
	'Topic :: Text Processing :: Markup :: XML',
	'Topic :: Text Processing :: Filters',
	'Environment :: Console',
	'Environment :: Web Environment',
	'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
]
description = "The Swiss Army Knife of RSS slicer-dicers"
authors = [
    {name = "Tim Prince",email = "tim.prince@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
]

[tool.poetry]
packages = [{include = "rss_slicer", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pyproject-flake8 = "^7.0.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
suggestion-mode = true
extension-pkg-allow-list = "lxml"
no-docstring-rgx = "^(_|test_)"

[tool.pylint.basic]
docstring-min-length = -1

[tool.pylint."messages control"]
disable = ["too-many-instance-attributes",
           "too-many-branches"]
